signup form working with the ability to store authenticated  users in our database

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,6 +5,7 @@
   margin:auto;
   justify-content: space-between;
   margin-bottom: 25px;
+  color: black !important;
 
   .logo-container {
     height: 100%;
