--- a/src/pages/sign-in-and-sign-up.styles.scss
+++ b/src/pages/sign-in-and-sign-up.styles.scss
@@ -1,4 +1,7 @@
 .sign-in-and-sign-up{
-  width: 90%;
-  margin: auto;
+  width: 850px;
+  display:flex;
+  justify-content: space-between;
+  margin: 30px auto;
 }
+
